--- a/inventory/src/App.css
+++ b/inventory/src/App.css
@@ -1,15 +1,15 @@
 /* Updated App.css */
 
-/* body, html {
+body, html {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
   background-color: #f4f4f4;
-  background-image: url('./images/homepage.png');
+  background-image: url('C:/Users/nams1/OneDrive/Documents/Academic/SEM-4/EcoEats_githubConnected/EcoEats/inventory/public/Foods.jpeg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-} */
+}
 
 .App {
   max-width: 1200px;
@@ -24,8 +24,6 @@
   padding: 10px 0;
   display: flex;
   justify-content: space-around;
-  /* Add shadow for depth */
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .toolbar button {
@@ -35,7 +33,7 @@
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
-  font-size: 20px; 
+  font-size: 16px;
   cursor: pointer;
 }
 
@@ -49,11 +47,6 @@ header {
   padding: 20px 0;
   text-align: center;
   border-bottom: 1px solid #ddd;
-
-  /* font-size: 48px; 
-  color: #2c3e50; 
-  font-weight: bold;
-  text-shadow: 2px 2px rgba(0, 0, 0, 0.1); */
 }
 
 table {
@@ -114,50 +107,3 @@ tr:hover {
 }
 
 /* Add more styling as needed */
-/*****************************************************************************/
-
-/* New styles for animations */
-button {
-  transition: background-color 0.3s ease;
-}
-
-button:hover {
-  transition: background-color 0.3s ease;
-  background-color: #3498db; /* A cool blue shade when hovered */
-}
-
-.popup {
-  /* ... other styles ... */
-  /* Add a transition for when it pops up */
-  transition: transform 0.3s ease-out;
-  transform: translate(-50%, -50%) scale(1);
-}
-
-.popup.open {
-  transform: translate(-50%, -50%) scale(1.05);
-}
-
-
-/* Add styles for the navbar and page banner */
-
-.navigation {
-  background-color: navy;
-  display: flex;
-  justify-content: space-around;
-  padding: 10px 0;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  /* ... other styles ... */
-}
-
-.homepage-banner {
-  background-image: url('./images/homepage.png'); /* Make sure this path is correct */
-  height: 300px; /* Adjust as needed */
-  background-size: cover;
-  background-position: center;
-}
-
-
-/* Ensure your inventory list is styled and appears below the banner */
-.inventory-list {
-  margin-top: 20px; /* Adjust as necessary */
-}
