--- a/inventory/src/App.css
+++ b/inventory/src/App.css
@@ -20,8 +20,8 @@ body, html {
 }
 
 .toolbar {
-  background-color: navy;
-  padding: 10px 0;
+  background-color: #2E8B57;
+  padding: 7px 0;
   display: flex;
   justify-content: space-around;
 }
@@ -30,10 +30,10 @@ body, html {
   background-color: transparent; /* Remove black highlight */
   border: none;
   color: white;
-  padding: 10px 20px;
+  padding: 5px 5px;
   text-align: center;
   text-decoration: none;
-  font-size: 16px;
+  font-size: 14px;
   cursor: pointer;
 }
 
